# DCL_Checkers

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  CheckersConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/ColorPoints/: CMakeLists.txt  ColorPoints.cpp  ColorPoints.hpp
src/Components/CvInRange/: CMakeLists.txt  CvInRange.cpp  CvInRange.hpp
src/Components/GenerateCheckers/: CMakeLists.txt
src/Components/ImageData/: CMakeLists.txt  ImageData.cpp  ImageData.hpp
src/Components/ImageSender/: CMakeLists.txt  ImageSender.cpp  ImageSender.hpp
src/Components/ProcessData/: ProcessData.cpp  ProcessData.hpp
src/Components/ROSProxy/: CMakeLists.txt  ROSProxy.cpp  ROSProxy.hpp
src/Types/: CMakeLists.txt  ChessboardData.hpp  ColorCircle.hpp  ColorPoint.hpp  ImageData.hpp
tasks/: Checkers.xml  Checkers_przed_ponowna_kalibracja.xml  Checkers_zdjecia.xml  DetectCheckers.xml
